--- a/src/main/res/layout/activities.xml
+++ b/src/main/res/layout/activities.xml
@@ -13,6 +13,8 @@
         android:layout_marginStart="300dp"
         android:layout_marginBottom="4dp"
         android:backgroundTint="#62B8B2"
+        android:text="Profile"
+        android:textSize="11sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -23,6 +25,8 @@
         android:layout_marginStart="12dp"
         android:layout_marginBottom="4dp"
         android:backgroundTint="#62B8B2"
+        android:text="Leaderboard"
+        android:textSize="11sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -33,6 +37,8 @@
         android:layout_marginStart="108dp"
         android:layout_marginBottom="4dp"
         android:backgroundTint="#62B8B2"
+        android:text="Activities"
+        android:textSize="11sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -43,6 +49,8 @@
         android:layout_marginStart="204dp"
         android:layout_marginBottom="4dp"
         android:backgroundTint="#62B8B2"
+        android:text="Community"
+        android:textSize="11sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -148,10 +156,12 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="148dp"
+        android:layout_marginStart="116dp"
         android:layout_marginBottom="416dp"
-        android:text="Most Recent"
+        android:text="Most Recent Activity"
+        android:textAlignment="center"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -159,22 +169,11 @@
         android:id="@+id/recentActivity"
         android:layout_width="373dp"
         android:layout_height="33dp"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="16dp"
         android:layout_marginBottom="376dp"
         android:text="TextView"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/activityFinish"
-        android:layout_width="60dp"
-        android:layout_height="34dp"
-        android:layout_marginStart="324dp"
-        android:layout_marginBottom="376dp"
-        android:backgroundTint="#62B8B2"
-        android:text="Done"
-        android:textSize="10sp"
+        android:textAlignment="center"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -219,7 +218,26 @@
         android:layout_marginBottom="308dp"
         android:text="Recommended Activities"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/updateButton"
+        android:layout_width="158dp"
+        android:layout_height="38dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="468dp"
+        android:backgroundTint="#62B8B2"
+        android:text="Update Activities"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.constraintlayout.widget.Barrier
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="top"
+        tools:layout_editor_absoluteX="191dp"
+        tools:layout_editor_absoluteY="268dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
