--- a/src/main/res/layout/profile.xml
+++ b/src/main/res/layout/profile.xml
@@ -136,6 +136,8 @@
         android:layout_marginStart="300dp"
         android:layout_marginBottom="4dp"
         android:backgroundTint="#62B8B2"
+        android:text="Profile"
+        android:textSize="11sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -146,6 +148,8 @@
         android:layout_marginStart="12dp"
         android:layout_marginBottom="4dp"
         android:backgroundTint="#62B8B2"
+        android:text="Leaderboard"
+        android:textSize="11sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -156,6 +160,8 @@
         android:layout_marginStart="108dp"
         android:layout_marginBottom="4dp"
         android:backgroundTint="#62B8B2"
+        android:text="Activities"
+        android:textSize="11sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -166,6 +172,8 @@
         android:layout_marginStart="204dp"
         android:layout_marginBottom="4dp"
         android:backgroundTint="#62B8B2"
+        android:text="Community"
+        android:textSize="11sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
